src/sass/styles.scss
* { box-sizing: border-box; moz-box-sizing: border-box; }

body {
  background: #2e2e2e;
  font-family: Roboto, sans-serif;
  margin: 0;
  padding-bottom: 7%;
}
img {
  max-width: 100%;
}
a {
  text-decoration: none;
  color: #4082c1;
}
abbr {
  border-bottom: 1px dashed #777;
  cursor: help;
  margin-bottom: -1px;
}

/* Typography */
h2, h3, h4 {
  font-weight: normal;
  margin: 0;
}

h3 {
  font-size: 1.6em;
  line-height: 1.2;
}
@media (min-width: 30em) {
  h3 {
    font-size: 1.5em;
    font-weight: normal;
  }
}
@media (min-width: 55em) {
  h3 {
    font-size: 1.5em;
    font-weight: normal;
  }
}
p {
  color: #2e2e2e;
  font-size: 1em;
  margin: 1.5em 0;
  line-height: 1.5em;
}

.central {
  background: #fff;
}

.site-hed {
  background: #2e2e2e;
  color: #fff;
  display: inline-block;
  font-size: 2.8em;
  padding: .2em .4em;
  margin: 0 0 .25em 0;
}
@media (max-width: 44.9375em) {
  .site-hed {
    font-size: 1.1em;
    left: 0;
    padding: .8em 0 .8em 3.5em;
    position: absolute;
    top: 0;
    width: 100%;
  }
  .j5-icon {
    position: absolute;
    left: 1em;
    top: -.25em;
    width: 2em;
    z-index: 2;
  }
  .mast {
    background: #2e2e2e;
    padding-top: 3.1em; /* font-size + top padding + bottom padding + bottom margin */
  }
}
.site-subhed {
  font-size: 1.6em;
  line-height: 1.25;
  margin: 0;
}
@media (min-width: 30em) {
  .site-subhed {
    font-size: 2em;
  }
}

.js-board-type {
  display: block;
}

@media (min-width: 45em) {
  .site-subhed {
    font-size: 2.3em;
  }
}

.lede {
  font-size: 1.4em;
  font-size: 6.5vw;
  line-height: 1.65;
  max-width: 930px;
  padding: 2.5em 1em;
  text-align: center;
}
.lede:after {
  border: 2px solid #2e2e2e;
  content: "";
  display: block;
  margin: .55em auto 0 auto;
  width: 50%;
}

@media (min-width: 30em) {
  .lede {
    font-size: 1.8em;
    font-size: 5vw;
  }
}
@media (min-width: 45em) {
  .lede {
    line-height: 1.5;
    font-size: 2em;
    font-size: 3.75vw;
  }
}
@media (min-width: 60em) {
  .lede {
    font-size: 2.3em;
    padding: 0;
    max-width: 700px;
  }
}
.lede i {
  font-style: normal;
  font-weight: bold;
}
.lede img {
  height: 1.5em;
  margin-bottom: -.225em;
}

.byline {
  font-size: 1.2em;
  line-height: 1.2;
  padding-bottom: .25em;
  margin: .25em 0 0 0;
}
@media (min-width: 60em) {
  .byline {
    font-size: 1.4em;
  }
}


/* Layout Framework */
[class^="wrap"]{
  clear: both;
}
.wrap-a {
  margin: 0 auto;
}
.wrap-b {
  float: right;
  min-width: 84.9525337%;
}
.wrap-c {
  padding-left: 15.0474663%;
  padding-right: 15.0474663%;
}

.wrap-d {
  float: left;
  min-width: 84.9525337%;
}

@media (min-width: 45em) {
  .wrap-a {
    width: 90%;
    padding: 1.1em 0 3.15em 0;
  }
  .johnny-five-is {
    width: 90%;
    padding: 1.1em 0 0 0;
  }
  .wrap-b {
    padding-left: 5%;
  }
  .wrap-b .teaser {
    padding: 4% 0 2.5% 0;
  }

  .wrap-b.support .teaser {
    padding: 2em 1em;
  }

  .wrap-d .variant {
    padding: 0 0 2.5% 0;
  }

  .wrap-d .variant ul {
    padding: 0 1em 0 37%;
  }

}
@media (min-width: 75em) {
  .wrap-a {
    /*width: 69.7639565%;*/
    width: 100%;
    padding: 1.1em 0 0.15em 15.0474663%;
  }

  .johnny-five-is {
    width: 69.7639565%;
    float: left;
  }


  .the-book {
    padding-left: 5%;
    width: 69.7639565%;
  }
  .wrap-b {
    padding-left: 15.0474663%;
  }
  .wrap-d {
    padding-left: 0;
  }
  .wrap-d img {
    max-width: 30%;
  }

  .wrap-d .variant ul {
    padding: 0 2em 0 21em;
  }
  .wrap-docs {
    width: 69.7639565%;
  }

  .wrap-b.support .teaser {
    padding: 4% 0 2.5% 0;
  }


}

.wrap-docs {
  clear: both;
  padding: 1.5em 1em;
}

.teaser {
  clear: both;
  padding: .25em 1em .5em 1em;
}

.johnny-five-is .teaser {
  clear: both;
  padding: 1em 1em .5em 0.6em;
}

.variant .url-fragment {
  color: black;

}

.variant .url-fragment:before {
  content: '\uDD17';
}


@media (min-width: 45em) {
  .teaser {
    clear: none;
    padding: 0;
  }
}
.wrap-a .teaser {
  /*padding-left: 5%;*/
}
.wrap-b .teaser {
  padding-right: 5%;
}

.j5-icon {
  margin-top: .95em;
  float: left;
}

.mast {
  position: relative;
}
.banner {
  background-color: #efe13d;
  background-image: url(../img/pcb.jpg);
  background-position: -20% top;
  border-bottom: 1em solid transparent;
}
.banner-home {
  padding: 2.5em 6.5em 1.75em 1em;
}
@media (min-width: 30em) {
  .banner-home {
    border-bottom: 2em solid transparent;
    padding: 5.5em 6.5em 3.75em 5%;
  }
}
@media (min-width: 45em) {
  .banner {
    padding: 2.5em 6.5em 1.75em 5%;
  }
}

@media (min-width: 75em) {
  .banner {
    padding-left: 15.0474663%;
;
  }
  .banner-home {
    border-bottom: 2em solid transparent;
    padding: 5.5em 6.5em 3.75em 15.0474663%;
  }
}


.j5 {
  float: right;
  max-width: 27%;
  width: 7.5em;
  position: absolute;
  bottom: 0;
  right: 5%;
}
@media (min-width: 30em) {
  .j5 {
    width: 225px;
  }
}
@media (min-width: 45em) {
  .j5 {
    right: 10%;
  }
}
@media (min-width: 75em) {
  .j5 {
    right: 15%;
    max-width: 260px;
    width: auto;
  }
}
.nav-primary {
  background: #1d1d1d;
  padding: 1em 0 .75em 1em;
}
@media (min-width: 35em) {
  .nav-primary {
    display: table;
    width: 100%;
  }
}
@media (min-width: 45em) {
  .nav-primary {
    background: #2e2e2e;
    display: block;
    padding: 0 5%;
    width: auto;
  }
}
@media (min-width: 75em) {
  .nav-primary {
    padding: 0 15.0474663%;
  }
}
.navlist a {
  display: inline;
  padding: 0.25em 0.25em 0.25em 0;
  margin: 10px 0;
  color: white;
  text-decoration: none;
  -webkit-transition: color .2s ease-in-out;
  transition: color .2s ease-in-out;
}
.navlist a:hover,
.navlist a:active {
  color: #ede63e;
}

.navlist a:active {
  margin-top: 11px;
  margin-bottom: -1px;
}
.navlist a:last-of-type:active {
  margin-bottom: 9px;
}

.navlist a.link-display-short {
  display: inline;
}

.navlist a.link-display-full {
  display: none;
}
/* ... */

